--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ html {
 body {
     font-size: 1.6rem;
     background: var(--paleblue);
-    /* background: url(./images/pattern-background-mobile.svg); */
+    background: url(./images/pattern-background-mobile.svg), var(--paleblue);
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'Red Hat Display', sans-serif;
     font-weight: 500;
     color: var(--deblue);
@@ -31,7 +33,6 @@ main {
     background: var(--vpaleblue);
     margin: 0 15px;
     text-align: center;
-    /* padding: 25px; */
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -144,16 +145,34 @@ h1 {
     text-decoration: none;
 }
 
+
+
+@media screen and (min-width: 45em) and (max-width: 90em) {
+    body {
+        padding: 0 auto;
+        margin: 0;
+    }
+
+    main {
+        max-width: 50%;
+        position: absolute;
+        top: 50%;
+        left: 50vw;
+        transform: translate(-50%, -50%);
+        margin: 0;
+    }
+}
+
 @media screen and (min-width: 90em) {
     body {
-    background: var(--paleblue);
-    /* background: url(./images/pattern-background-desktop.svg); */
-    font-family: 'Red Hat Display', sans-serif;
-    /* padding: 2em .8em; */
+        background: var(--paleblue);
+        background: url(./images/pattern-background-desktop.svg), var(--paleblue);
+        background-repeat: no-repeat;
+        background-size: cover;
 }
 
 main {
-    width: 25%;
+    width: 30%;
     background: var(--vpaleblue);
     position: absolute;
     top: 50%;
